# site

./: .babelrc  .editorconfig  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .releaserc  .releaserc.js  .snyk  .spelling  .travis.yml  CHANGELOG.md  LICENSE  README.md  cypress.config.js  cypress.json  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  jest.config.js  package-lock.json  package.json  shell.nix  wrangler.json
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/cxx-modules/: CMakeLists.txt  CXXModules.cmake  LICENSE  README.md  main.cpp  math.cpp
examples/nintendo-switch-virtual-keyboard/: CMakeLists.txt  LICENSE  README.md  main.c
examples/nintendo-switch-virtual-keyboard/cmake/toolchains/: switch.cmake
examples/wrapping-c-libraries-with-smart-pointers/: LICENSE  README.md  sdl_example.c
generators/example/: index.js
generators/example/templates/: README.md
generators/post/: index.js
posts/cxx-modules/: index.md
posts/how-this-site-gets-built/: index.md
posts/nintendo-switch-virtual-keyboard/: index.md
posts/playlog-december-2018-grim-fandango-remastered/: index.md
posts/wrapping-c-libraries-with-smart-pointers/: index.md
scripts/: export-resume.js  update-dependencies.sh
src/: resume.json  theme.config  util.js
src/__tests__/: util.js
src/components/: Footer.js  Head.js  Header.js  Layout.js  Layout.less  Navigation.js  Pagination.js  PostList.js  SEO.js
src/pages/: 404.js  resume.js
src/templates/: blog.js  page.js  post.js  tag.js
test/unit/: preprocess.js
(+26 files in other folders)
